--- a/product-service/.gitignore
+++ b/product-service/.gitignore
@@ -1,61 +1,51 @@
-############################
-# Java / Build outputs
-############################
-*.class
-/target/
-/build/
-
-############################
-# Maven / Gradle wrappers
-############################
+target/
 !.mvn/wrapper/maven-wrapper.jar
-!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
-############################
-# IntelliJ IDEA
-############################
-.idea/
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
 *.iml
-out/
+*.ipr
 
-############################
-# VS Code (optional)
-############################
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
 .vscode/
 
-############################
-# OS files
-############################
+### OS ###
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+
 Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
 
-############################
-# Docker
-############################
-# Local-only overrides
-docker-compose.override.yml
-
-# Docker volumes / runtime data
-docker-data/
-volumes/
-data/
-
-############################
-# Spring Boot logs
-############################
-logs/
-*.log
-
-############################
-# Environment variables
-############################
-.env
-.env.*
-!.env.example
-
-############################
-# Coverage / reports
-############################
-coverage/
-jacoco/
-reports/
+*.lnk
